--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,12 +6,10 @@
         "jest": true
     },
     "extends": [
-        "airbnb-base",
         "prettier"
     ],
     "parserOptions": {
         "ecmaVersion": 12
     },
-    "rules": {
-    }
+    "rules": {}
 }
