--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vercel/ncc": "^0.38.3",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
+    "globals": "^16.3.0",
     "jest": "^29.5.0",
     "prettier": "^3.6.2"
   }
